--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ serving/**/*.jpeg
 #compiled files
 **/*.pyc
 */attention/attention_scores_*.json
+dit_serve/model.zip
+dit_serve/Dit_model/*
+dit_serve/logs/*
+dit_serve/model_store/*
