--- a/dit_serve/config.properties
+++ b/dit_serve/config.properties
@@ -4,6 +4,18 @@ management_address=http://127.0.0.1:8081
 metrics_address=http://127.0.0.1:8082
 enable_envvars_config=true
 install_py_dep_per_model=true
-load_models=all
-max_response_size=655350000
+load_models=dit-model.mar
 model_store=model_store
+models={\
+  "dit-model": {\
+    "1.0": {\
+        "defaultVersion": true,\
+        "marName": "dit-model.mar",\
+        "minWorkers": 1,\
+        "maxWorkers": 1,\
+        "batchSize": 4,\
+        "maxBatchDelay": 100,\
+        "responseTimeout": 120\
+    }\
+  }\
+}
