--- a/dit_serve/config_compiled.properties
+++ b/dit_serve/config_compiled.properties
@@ -1,16 +1,16 @@
 #Sample config.properties. In production config.properties at /mnt/models/config/config.properties will be used
-inference_address=http://127.0.0.1:8080
-management_address=http://127.0.0.1:8081
-metrics_address=http://127.0.0.1:8082
+inference_address=http://127.0.0.1:3000
+management_address=http://127.0.0.1:3001
+metrics_address=http://127.0.0.1:3002
 enable_envvars_config=true
 install_py_dep_per_model=true
-load_models=dit-model.mar
+load_models=dit-model-compiled.mar
 model_store=model_store
 models={\
   "dit-model-compiled": {\
     "1.0": {\
         "defaultVersion": true,\
-        "marName": "dit-model.mar",\
+        "marName": "dit-model-compiled.mar",\
         "minWorkers": 1,\
         "maxWorkers": 1,\
         "batchSize": 1,\
