basic sd3 service working

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 */attention/attention_scores_*.json
 dit_serve/model.zip
 dit_serve/Dit_model/*
-dit_serve/logs/*
-dit_serve/model_store/*
+
+#log files
+**/logs/*
+**/model_store/*
+
+
+**/*_model
 
