--- a/sd3_serve/sd3_uncompiled/config.properties
+++ b/sd3_serve/sd3_uncompiled/config.properties
@@ -6,16 +6,18 @@ enable_envvars_config=true
 install_py_dep_per_model=true
 load_models=sd3-model.mar
 model_store=model_store
+max_response_size=655350000
 models={\
   "sd3-model": {\
-    "1.0": {\
+    "1.02": {\
         "defaultVersion": true,\
-        "marName": "dit-model.mar",\
+        "marName": "sd3-model.mar",\
         "minWorkers": 1,\
         "maxWorkers": 1,\
         "batchSize": 1,\
         "maxBatchDelay": 100,\
-        "responseTimeout": 120\
+        "responseTimeout": 120,\
+        "startupTimeout": 1000\
     }\
   }\
 }
