--- a/sd3_serve/sd3_uncompiled/batched/config.properties
+++ b/sd3_serve/sd3_uncompiled/batched/config.properties
@@ -5,16 +5,16 @@ metrics_address=http://127.0.0.1:8082
 enable_envvars_config=true
 install_py_dep_per_model=true
 load_models=sd3-model.mar
-model_store=model_store
+model_store=../model_store
 max_response_size=655350000
 models={\
-  "sd3-model": {\
-    "1.02": {\
+  "sd3-model-batched": {\
+    "1.0": {\
         "defaultVersion": true,\
         "marName": "sd3-model.mar",\
         "minWorkers": 1,\
         "maxWorkers": 1,\
-        "batchSize": 1,\
+        "batchSize": 4,\
         "maxBatchDelay": 100,\
         "responseTimeout": 120,\
         "startupTimeout": 1000\
