reusing the same mar

--- a/sd3_serve/sd3_uncompiled/batched/config.properties
+++ b/sd3_serve/sd3_uncompiled/batched/config.properties
@@ -8,8 +8,8 @@ load_models=sd3-model.mar
 model_store=../model_store
 max_response_size=655350000
 models={\
-  "sd3-model-batched": {\
-    "1.0": {\
+  "sd3-model": {\
+    "1.02": {\
         "defaultVersion": true,\
         "marName": "sd3-model.mar",\
         "minWorkers": 1,\
